css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

:root {
    --tausta: #eeeeee;
    --tummempitausta: #e0e0e0;
    --tummintausta: #cecece;
    --teksti: #333333;
    --linkki: #444296;
    --reunus: #3f3f3f;
}

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
    background-color: var(--tausta);
    color: var(--teksti);
}

main {
    font-size: 1.2em;
    line-height: 1.5em;
}

section {
    max-width: 900px;
    width: 80%;
    margin: 20px auto;
}

nav {
    display: block;
    overflow: hidden;
    position: absolute;
    width: 250px;
    left: 20;
    margin-right: 10px;
    margin-left: 20px;
}

a {
    color: var(--linkki);
    text-decoration: none;
}

#navigointi a {
    font-size: 1.3em;
  }

footer {
    max-width: 900px;
    width: 80%;
    margin: 20px auto;
    text-align: right;
}

table {
    border-color: var(--reunus);
    border: solid;
    border-collapse: collapse;
}

th {
    border: 0;
    background: var(--tummintausta);
    position: sticky;
    top: 0;
}

td {
    border-color: var(--reunus);
    border: 1px solid;
}

tr {
    border-color: var(--reunus);
    border: 1px solid;
}

tr:nth-child(odd) {
    background-color: var(--tummempitausta);
}

tr.spacer {
    border: 0;
    height: 20px;
}

#arvosana {
    width: 150px;
    text-align: center;
    /*vertical-align: top;*/
    background-color: var(--tummempitausta);
}

#kriteeri {
    padding-left: 10px;
}

#kriteeri::first-letter {
    text-transform: capitalize;
}

ul {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    list-style-type: square;
    list-style-position: outside;
}

#sisempilista {
    padding-left: -10px;
    list-style-type: disc;
    list-style-position: outside;
}

li::first-letter {
    text-transform: capitalize;
}

